--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "colorutilities": "0.0.2",
     "ent": "^2.2.0",
     "export-files": "^2.1.1",
     "fill-range": "^5.0.0",
