--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "export-files": "^2.1.1",
     "fill-range": "^5.0.0",
     "get-value": "^3.0.1",
-    "handlebars-utils": "^1.0.6",
     "inflection": "^1.12.0",
     "is-number": "^5.0.0",
     "isobject": "^3.0.1",
+    "kind-of": "^6.0.2",
     "moment": "^2.21.0"
   },
   "devDependencies": {
